<resources>
    <string name="app_name">Dormitory</string>
    <string name="fragment_payment_title">Оплата</string>
    <string name="fragment_schedule_title">График уборки</string>
    <string name="fragment_options_title">Настройки</string>
    <string name="fragment_todo_title">Список дел</string>
    <string name="activity_reset_password">Восстановление пароля</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="login_contract_hint">Введите номер договора</string>
    <string name="login_email_hint">Введите Email</string>
    <string name="login_pass_hint">Введите пароль</string>
    <string name="reset_pass_hint">Введите новый пароль</string>
    <string name="reset_pass_successful">Пароль сменён успешно</string>
    <string name="reset_pass_repeat_hint">Повторите новый пароль</string>
    <string name="reset_pass_not_watch">Пароли должны совпадать</string>
    <string name="register_name_hint">Введите имя</string>
    <string name="register_second_name_hint">Введите фамилию</string>
    <string name="register_patronymic_hint">Введите отчество</string>
    <string name="about_app">О приложении</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="wrong_login_password">Неверный логин или пароль</string>
    <string name="network_exception">Произошла ошибка проверьте соединение\nи попытайтесь ещё раз</string>
    <string name="email_already_in_use">Адрес почтовой почты уже используется</string>
    <string name="wrong_email">Неверный адрес почты</string>
    <string name="registration_weak_password">Слабый пароль (минимум 6 символов)</string>
    <string name="field_must_to_fill">Поле обязательно для заполнения</string>
    <string name="sending_restore_email_progress_title">Высылаем письмо</string>
    <string name="confirming_registration_progress_title">Подтверждаем регистрацию</string>
    <string name="sign_in_progress">Выполняется вход</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Создать аккаунт</string>
    <string name="notification_channel_name">DORMITORY_APP</string>
    <string name="notification_channel_description">This channel is used for Dormitory app notifications</string>
    <string name="notification_payment_title">Time to PAY >:c</string>
    <string name="notification_payment_text">Long boring context that no one will ever read</string>

    <string name="settings">Настройки</string>
    <string name="settings_personal_data">Личные данные</string>
    <string name="settings_password_title">Изменить пароль</string>
    <string name="settings_new_password">Новый пароль</string>
    <string name="settings_confirm_password">Подтвердите пароль</string>
    <string name="settings_wrong_password">Неверный текущий пароль</string>
    <string name="settings_mail">Почта</string>
    <string name="settings_mail_title">Изменить почту</string>
    <string name="settings_new_mail">Новая почта</string>
    <string name="settings_notifications">Оповещения</string>
    <string name="settings_exit_account">Выйти из аккаунта</string>
    <string name="settings_exit_room">Выйти из квартиры</string>
    <string name="settings_exit_room_warning_title">Внимание!</string>
    <string name="settings_exit_room_warning_message">Вы не сможете вернуться в квартру если в ней не останется участников</string>
    <string name="settings_contract">Номер договора</string>
    <string name="settings_name">ФИО</string>
    <string name="settings_name_hint">Введите ФИО</string>
    <string name="settings_name_title">Изменить ФИО</string>
    <string name="settings_contract_title">Изменить номер договора</string>
    <string name="settings_new_contract">Новый номер договора</string>
    <string name="settings_cost_per_month">Цена за месяц:</string>
    <string name="settings_change_cost">Изменить цену за месяц</string>
    <string name="settings_months_to_pay_for">Оплата за месяца:</string>
    <string name="settings_months_select">Выбрать</string>
    <string name="settings_date_picker_title">Выберите первую и последнюю даты оплаты</string>
    <string name="settings_change_password">Смените пароль</string>
    <string name="select">Подтвердить</string>
    <string name="cancel">Отменить</string>
    <string name="settings_date_picker_invalid_dates">Введены неверные даты</string>
    <string name="save">Сохранить</string>
    <string name="settings_change_personal_title">Изменить личные данные</string>
    <string name="settings_card_number">Номер карты</string>
    <string name="settings_card_number_hint">Номер карты без пробелов</string>
    <string name="settings_cardholder_name">Имя владельца</string>
    <string name="settings_card_date">Дата карты</string>
    <string name="settings_card_date_format">%s.%s</string>
    <string name="settings_wrong_pass">Неверный пароль</string>

    <string name="payment_title">Оплата проживания</string>
    <string name="payment_fio">Ф.И.О.</string>
    <string name="payment_user_not_found">Пользователь с указаными ФИО и договором не найден</string>
    <string name="payment_pay_action">Оплатить</string>
    <string name="payment_price_title">Стоимость</string>
    <string name="payment_range_other">%d месяцев, до %s</string>
    <string name="payment_range_one">%d месяц, до %s</string>
    <string name="payment_range_two_three">%d месяца, до %s</string>
    <string name="payment_price_tmp">%d рублей %d копеек</string>
    <string name="payment_card_tmp">• • • • %d</string>
    <string name="field_not_set">Не установлено</string>
    <string name="no_payment_credits_set">Некоторые платежные данные не заданы</string>
    <string name="payment_cvv_hint">Введите CVV/CVC2 для продолжения платежа</string>
    <string name="payment_sms_hint">Введите код из SMS для подтверждения платежа</string>
    <string-array name="payment_progress">
        <item>Грабим банк&#8230;</item>
        <item>Берем в долг&#8230;</item>
        <item>Голосуем за Путина&#8230;</item>
        <item>Поливаем лужайку&#8230;</item>
        <item>Ищем баги&#8230;</item>
    </string-array>

    <string name="register_already_have_account">Уже есть аккаунт? Войти</string>
    <string name="register_already_have_keyword">Войти</string>
    <string name="register_continue">Далее</string>
    <string name="register_finish">Зарегистрироваться</string>

    <string name="forgot_password_title">Введите вашу почту для восстановления пароля</string>
    <string name="forgot_password_button">Восстановить пароль</string>
    <string name="forgot_password_try_again">Ввести ещё раз</string>
    <string name="forgot_password_back">Вернуться ко входу</string>
    <string name="forgot_password_callback_fail">Упс! Аккаунта с такой почтой не существует</string>
    <string name="forgot_password_callback_success">Отлично! Мы отправили ссылку для восстановления пароля на</string>
    <string name="schedule_room">Комната</string>
    <string name="schedule_room_comment">Комментарий</string>
    <string name="schedule_all_rooms">все</string>
    <string name="schedule_add_duty">Добавить</string>
    <string name="schedule_edit_duty">Редактировать</string>
    <string name="schedule_duty_deleted">Дежурство удалено</string>
    <string name="schedule_room_number_hint">Введите номер квартиры</string>
    <string name="schedule_room_id_hint">Введите ID квартиры</string>
    <string name="schedule_room_not_found">Данная квартира не найдена</string>
    <string name="schedule_room_id_exists">Данный ID уже сущестует</string>

    <string name="todo_done">Выполнено</string>
    <string name="todo_create_todo_title">Название</string>
    <string name="todo_create_todo_time">Крайний срок</string>
    <string name="todo_no_todos_title">Создайте ToDo нажав на &#43; в верху приложения</string>
    <string-array name="todo_titles">
        <item>Покормить кота</item>
        <item>Полить цветы</item>
        <item>Забрать ребенка из детдома</item> <!-- TODO -->
        <item>Купить еды</item>
        <item>Помыть пол</item>
    </string-array>
    <string name="todo_description">Описание</string>
    <string name="todo_create_fields_error">Не все обязательные поля заполнены</string>
    <string name="error_try_later">Произошла ошибка, повторить попытку немного позже</string>

    <string name="schedule_select_or_join_room">Чтобы пользоваться расписанием войдите или создайте квартиру</string>
    <string name="button_join_room">Присоединиться к квартире</string>
    <string name="button_create_room">Создать свою квартиру</string>
    <string name="title_create_room">Введите номер квартиры</string>
    <string name="title_join_room">Введите код квартиры</string>
    <string name="create">Создать</string>
    <string name="join">Присоединиться</string>
    <string name="proceed">Продолжить</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
