<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_login_layout"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/ll_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:minWidth="100dp"
        android:paddingHorizontal="40dp">

        <EditText
            android:id="@+id/et_app_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/et_app_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/bn_app_sign_in"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="@string/sign_in"/>

            <Button
                android:id="@+id/bn_app_sign_up"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>