<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.resetPassword.ResetPasswordActivity">

    <ImageView
        android:id="@+id/iv_login_icon"
        android:src="@drawable/ic_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_new_password"
        android:inputType="textPassword"
        android:hint="@string/reset_pass_hint"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/iv_login_icon"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_new_password_repeat"
        android:inputType="textPassword"
        android:hint="@string/reset_pass_repeat_hint"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_password" />

    <Button
        android:id="@+id/btn_register_next"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/select"
        android:textColor="#FFF"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_password_repeat" />

</android.support.constraint.ConstraintLayout>